syntax = "proto3";

package proto;
option go_package = "github.com/anguud/DS_Mandatory_miniproject_3;proto";

service project_bid {
    rpc bid (Amount) returns (Ack) {} 
    rpc result (Message) returns (Outcome){}
}

message Amount {
    int64 amount = 1;
    string client_id = 2; 
}

message Ack {
    string response = 1;
}

message Outcome {
    int64 highestBid = 1;
    bool isAuctionOver = 2; 
}

message Message {
}